--- a/learning/courses/practical-introduction-to-quantum-safe-cryptography/cryptographic-hash-functions.ipynb
+++ b/learning/courses/practical-introduction-to-quantum-safe-cryptography/cryptographic-hash-functions.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "3d50812a-1695-4fa8-90c6-e0aed9b51bc8",
+   "metadata": {},
+   "source": [
+    "{/* cspell:ignore  onewayfn, injectivity, randomoracle, WXYZ, VXYZ, Bassard, Høyer, QRAM, Chailloux, Schrottenloher, Shen  */}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "48916182-96be-446c-a13e-e05a7093c4ce",
    "metadata": {},
    "source": [
