--- a/learning/courses/practical-introduction-to-quantum-safe-cryptography/quantum-safe-cryptography.ipynb
+++ b/learning/courses/practical-introduction-to-quantum-safe-cryptography/quantum-safe-cryptography.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "a3c8b3a5-87b5-4084-8475-a04ca0b5a837",
+   "metadata": {},
+   "source": [
+    "{/* cspell:ignore primefactor, cryptosystems, Buchmann, Dahmen, Nazario, Diffie, DTMs, cryptologists, Homomorphic, Cryptologists, Eliece, Merkle, Isogeny, Supersingular, Zeadally, NTRU, isogeny, Sendrier, Dilithium, SPHINCS, FIPS, Lenstra, Lovász, smallsetminus,Miklós, Ajtai, Lyubashevsky, Micciancio, Díaz, Rolim, Regev, leftarrow, ciphertext, adots, liboqs, Stehle, Schwabe, kems, Decapsulation,recepient, kemalg, decapsulation, Ciphertext, plaintexts, OAEP, trival, ciphertexts, Fujisaki, Okamoto, Eiichiro, Okamato, Tatsuaki, Crytography */}"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "84572da9-09ae-4ac2-b65a-fbf362d4375b",
@@ -274,7 +282,7 @@
     "\n",
     "The CVP is also known to be NP-hard.\n",
     "\n",
-    "![Fig 3: The CVP on a lattice specified by basis vectors b_1, b_2: The red point represents the closest lattice vector to the given external vector shown in green that is not on the lattice](images/CVP.avif)\n",
+    "![Fig 3: The CVP on a lattice specified by basis vectors b_1, b_2: The red point represents the closest lattice vector to the given external vector shown in green that is not on the lattice](/learning/images/courses/practical-introduction-to-quantum-safe-cryptography/quantum-safe-cryptography/CVP.avif)\n",
     "\n",
     "*Figure 3. The CVP on a lattice specified by basis vectors $b_1$, $b_2$: The red point represents the closest lattice vector to the given external vector shown in green that is not on the lattice*\n",
     "\n",
@@ -971,8 +979,7 @@
   }
  ],
  "metadata": {
- "title": "Quantum-safe cryptography",
- "description": "In this lesson we will look at how moving to quantum-safe cryptography can protect data today against the threat of quantum algorithms.",
+  "description": "In this lesson we will look at how moving to quantum-safe cryptography can protect data today against the threat of quantum algorithms.",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -990,6 +997,7 @@
    "pygments_lexer": "ipython3",
    "version": "3"
   },
+  "title": "Quantum-safe cryptography",
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
     "state": {},
