--- a/learning/courses/practical-introduction-to-quantum-safe-cryptography/symmetric-key-cryptography.ipynb
+++ b/learning/courses/practical-introduction-to-quantum-safe-cryptography/symmetric-key-cryptography.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "14dd451a",
+   "metadata": {},
+   "source": [
+    "{/* cspell:ignore ciphertext, cryptosystems, Rijndael, Daemen, Rijmen, monoalphabetic, secretpy, Smid, Foti, lamba, encryptor, encypt, Schneier, ciphertexts, informationally, polyalphabetic, Vigenère, anagramming, Ciphertext, Prichett, Cryptosystems, Caeser, Vigenere, FIPS, Nechvatal, Dworkin, Roback, Technol, Codebook, cryptologists, keystreams, keystream, indcpa, Ehrsam, Tuchman, Bonnetain, Naya, Plasencia, IACR, multiround, Feistel, fips, Twofish, sbox, Rivest, QUIC, quic, Tomoiaga, Stratulat, digitalsignature, STOC, Leurent, qcaa, quantizations, secmargin, Cryptoanalytic, Malviya, Tiwari, Chawla, EUROCRYPT, Coron, semsec, Shamir, Adleman, Nazario */}"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "ea2ca7f5",
@@ -397,7 +405,7 @@
     "\n",
     "**Resistance to cryptanalytic attack:** The second basic requirement for a cipher, symmetric or otherwise, is that it can generate ciphertexts that are informationally [inscrutable][inscrutable]. To this end, a necessary but not sufficient condition from an information theory perspective is that [ciphertexts should be characterized by high entropy][123], making them indistinguishable from random text with no discernible patterns or correlations. This way, an attacker can gain no information about the plain text or secret key by trying to analyze the ciphertext using frequency analysis or other statistical techniques.\n",
     "\n",
-    "Resistance to general forms of cryptanalytic attacks sufficient to ensure [semantic security][120] is formalized via the notion of [*indistiguishability*][121] . While there are several variants of indistiguishability with distinct requirements, a symmetric cryptosystem is considered to be semantically secure if it satisfies the criterion of [*Indistinguishability under Chosen Plain Text Attack*][121] (IND-CPA). This means that an attacker cannot distinguish between the encryptions of two different messages even if allowed to send multiple plain texts of their choosing to the algorithm and view the corresponding ciphertexts.\n",
+    "Resistance to general forms of cryptanalytic attacks sufficient to ensure [semantic security][120] is formalized via the notion of [*indistinguishability*][121] . While there are several variants of indistinguishability with distinct requirements, a symmetric cryptosystem is considered to be semantically secure if it satisfies the criterion of [*Indistinguishability under Chosen Plain Text Attack*][121] (IND-CPA). This means that an attacker cannot distinguish between the encryptions of two different messages even if allowed to send multiple plain texts of their choosing to the algorithm and view the corresponding ciphertexts.\n",
     "\n",
     "As we will consider later, IND-CPA typically requires the use of randomness to ensure that each time a given plain text is encrypted with a given secret key, the resulting ciphertext is unpredictably different for each encryption.\n",
     "\n",
