Minor revisions to QCiP

--- a/learning/courses/quantum-computing-in-practice/index.mdx
+++ b/learning/courses/quantum-computing-in-practice/index.mdx
@@ -9,7 +9,7 @@ This course focuses on today's quantum computers and how to use them to their fu
 
 ## Recommended background
 
-To make the most out of this course, we recommend a familiarity with quantum information and quantum circuits, at the level explained in the [Basics of quantum information course](https://learning.quantum.ibm.com/course/basics-of-quantum-information) on this platform.
+To make the most out of this course, we recommend a familiarity with quantum information and quantum circuits, at the level explained in the [Basics of quantum information](/learning/courses/basics-of-quantum-information/index) course.
 
 Other recommended references include the following:
 
