--- a/learning/courses/quantum-computing-in-practice/introduction.ipynb
+++ b/learning/courses/quantum-computing-in-practice/introduction.ipynb
@@ -5,7 +5,7 @@
    "id": "a3e4e8b3-0b09-4977-9390-8b4d85889e76",
    "metadata": {},
    "source": [
-    "# Introduction\n",
+    "# Course introduction\n",
     "\n",
     "\n",
     "<ImageLink\n",
@@ -16,7 +16,7 @@
     "/>\n",
     "\n",
     "\n",
-    "## Course introduction\n",
+    "## About this course\n",
     "\n",
     "Welcome to *Quantum Computing in Practice* — a course that focuses on today's quantum computers and how to use them to their full potential.\n",
     "It covers realistic potential use cases for quantum computing as well as best practices for running and experimenting with quantum processors having 100 or more qubits."
@@ -277,9 +277,7 @@
     "   hypothesized to be one of the physics phenomena that gives quantum computing its power.)\n",
     "\n",
     " - **Speed.** Last is speed and efficiency. In short, the time spent running a program (including both quantum and\n",
-    "   classical parts) should be as short as possible.\n",
-    "\n",
-    "(Include figures tracking these metrics along with explanations.)"
+    "   classical parts) should be as short as possible."
    ]
   },
   {
