--- a/learning/courses/quantum-computing-in-practice/utility-scale-qaoa.ipynb
+++ b/learning/courses/quantum-computing-in-practice/utility-scale-qaoa.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "In this lesson, we'll get our hands dirty with a utility-scale example of the Max-Cut problem, which is a famous problem in graph theory involving how to best partition a graph into two. We'll start with a simple, five-node graph to build our intuition for how a quantum computer can help us solve the problem, then apply this to a utility-scale version of the problem.\n",
     "\n",
-    "This lesson will serve as a broad overview of the approach we take to solving this problem. This won't be a code walk-through. Accompanying this lesson, though, there is a [tutorial](https://learning.quantum.ibm.com/tutorial/quantum-approximate-optimization-algorithm) with actual code that you can run to solve the Max-Cut problem on a quantum computer.\n",
+    "This lesson will serve as a broad overview of the approach we take to solving this problem. This won't be a code walk-through. Accompanying this lesson, though, there is a [tutorial](/docs/tutorials/quantum-approximate-optimization-algorithm) with actual code that you can run to solve the Max-Cut problem on a quantum computer.\n",
     "\n",
     "\n",
     "## The Problem\n",
@@ -66,19 +66,21 @@
     "\n",
     "We'll use the Qiskit patterns framework to find the Max-Cut solutions for this graph on our quantum computer.\n",
     "\n",
-    "### 1.\tMap\n",
+    "### Map\n",
     "\n",
     "We need to map the problem onto our quantum computer. To do this, let's first note that maximizing the number of cuts in a graph can be mathematically written as:\n",
     "\n",
-    "$ \\max\\limits_{x\\in\\{0,1\\}^n} \\sum\\limits_{(i,j)} {x_i + x_j - 2x_ix_j}$\n",
-    "\n",
+    "$$\n",
+    "\\max\\limits_{x\\in\\{0,1\\}^n} \\sum\\limits_{(i,j)} {x_i + x_j - 2x_ix_j}\n",
+    "$$\n",
     "\n",
     "Where $i$ and $j$ are nodes in the graph, and $x_i$ and $x_j$ are either 0 or 1, depending on which side of the partition each node is on (one group is labelled “0” and one is labelled “1”). When $x_i$ and $x_j$ are on the same side of the partition, the expression in the sum is equal to zero. When they are on opposite sides, so there is a cut between them, the expression is equal to one. So, maximizing the number of cuts will maximize the sum.\n",
     "\n",
     "We can also flip this around, and search for the minimum by multiplying each of the values by negative one.\n",
     "\n",
-    "$ \\min\\limits_{x\\in\\{0,1\\}^n} \\sum\\limits_{(i,j)} {2x_ix_j - x_i - x_j}$\n",
-    "\n",
+    "$$\n",
+    "\\min\\limits_{x\\in\\{0,1\\}^n} \\sum\\limits_{(i,j)} {2x_ix_j - x_i - x_j}\n",
+    "$$\n",
     "\n",
     "Now, we're ready to map. It can be kind of daunting to think about how to go from a graph like we one we just drew to a quantum circuit. But we'll take it one step at a time.\n",
     "\n",
@@ -88,7 +90,9 @@
     "\n",
     "We can sample from these candidate solutions and then evaluate them using the cost function. To do this, we take advantage of a series of mathematical reformulations, including the Quadratic Unconstrained Binary Optimization notation — or QUBO for short — which is a useful way to encode combinatorial optimization problems. In QUBO, we want to find:\n",
     "\n",
-    "$\\min\\limits_{x\\in\\{0,1\\}^n} x^TQx$\n",
+    "$$\n",
+    "\\min\\limits_{x\\in\\{0,1\\}^n} x^TQx\n",
+    "$$\n",
     "\n",
     "where $Q$ is an $n\\times n$ matrix of real numbers, $n$ corresponds to number of nodes in our graph, here, five.\n",
     "\n",
@@ -103,15 +107,21 @@
     "\n",
     "In order to write the QUBO problem as the Ising Hamiltonian, all we actually need to do is do a simple change of variables:\n",
     "\n",
-    "$ x_i = \\frac{1-z_i}{2} $.\n",
+    "$$\n",
+    "x_i = \\frac{1-z_i}{2}.\n",
+    "$$\n",
     "\n",
     "We won't walk through all the steps here, but they are explained in the attached notebook. In the end, the minimization of the QUBO expression is the same as the minimization of this expression:\n",
     "\n",
-    "$\\min_{x\\in\\{0,1\\}^n} x^TQx\\Longleftrightarrow \\min_{z\\in\\{-1,1\\}^n}z^TQz + b^Tz $\n",
+    "$$\n",
+    "\\min_{x\\in\\{0,1\\}^n} x^TQx\\Longleftrightarrow \\min_{z\\in\\{-1,1\\}^n}z^TQz + b^Tz\n",
+    "$$\n",
     "\n",
     "Rewriting again slightly and we have our cost function Hamiltonian, where the minimum of the expression represents the ground state, `Z` is the Pauli Z operator, and $b$ is a real scalar coefficient:\n",
     "\n",
-    "$H_C=\\sum_{ij}Q_{ij}Z_iZ_j + \\sum_i b_i Z_i$\n",
+    "$$\n",
+    "H_C=\\sum_{ij}Q_{ij}Z_iZ_j + \\sum_i b_i Z_i\n",
+    "$$\n",
     "\n",
     "Now that we have our Hamiltonian, we need to rewrite it in terms of two-local Pauli ZZ operators, that we can easily convert to two-qubit gates in our quantum circuit. We'll end up with six objects — or Pauli strings — where each corresponds to each of the six edges in the graph. Each of the five elements in a string represents an operation on a node — the identity if the node is not connected to that particular edge, and the Pauli Z operator if it is. In Qiskit, bitstrings representing qubits are indexed backwards. For example, an edge between nodes 0 and 1 is encoded as `IIIZZ`, and an edge between 2 and 4 is encoded as `ZIZII`.\n",
     "\n",
@@ -140,19 +150,19 @@
     "\n",
     "The mixer Hamiltonian is the simple, sum of Pauli-X operations on each node of the graph. Qiskit allows you to use a different, custom mixer operator if you wish, but we are going to use the standard one here. So again, you can see that with Qiskit, a lot of the work is removed for us, making coming up with the mixer Hamiltonian and the starting state trivial. The only work we had to do was to find the cost function.\n",
     "\n",
-    "Each iteration of these operators is called a layer. These layers can be seen as discretization of the time evolution of the system, as previously described. The alternating pattern comes from the trotter decomposition and approximates the exponential functions of non-commuting matrices. In general, the more layers or steps we include, the closer we will be to continuous time evolution, like in QAA, so in theory, the more accurate the result will be. But for this example, we'll begin by just sampling with one layer. Remember, both the cost function Hamiltonian and the mixer are parameterized, we still need to come up with optimal values for $\\gamma$ and $\\beta$.\n",
+    "Each iteration of these operators is called a layer. These layers can be seen as discretization of the time evolution of the system, as previously described. The alternating pattern comes from the trotter decomposition and approximates the exponential functions of non-commuting matrices. In general, the more layers or steps we include, the closer we will be to continuous time evolution, like in QAA, so in theory, the more accurate the result will be. But for this example, we'll begin by just sampling with one layer. Remember, both the cost function Hamiltonian and the mixer are parameterized, we still need to come up with optimal values for $\\gamma$ and $\\beta.$\n",
     "\n",
     "\n",
-    "### 2.\tOptimize\n",
+    "### Optimize\n",
     "\n",
     "While the circuit we just created looks pretty simple and is useful to build up an intuitive understanding, remember, the quantum chip doesn't understand what the QAOA gate is. We need to turn this into a series of single- and two-qubit “native” gates that can be performed directly on the hardware. Native gates are those that can be performed directly on the qubits. Such circuits are said to be written in the backend's Instruction Set Architecture (ISA).\n",
     "\n",
     "The Qiskit library offers a series of transpilation passes that cater to a wide range of circuit transformations. We want to make sure that the circuit is optimized for our purpose.\n",
     "\n",
     "Recall from our previous lesson that the transpilation process involves several steps:\n",
-    "•\tInitial mapping of the qubits in the circuit (i.e. decision variables) to physical qubits on the device.\n",
-    "•\tUnrolling of the instructions in the quantum circuit to the hardware native instructions that the backend understands.\n",
-    "•\tRouting of any qubits in the circuit that interact to physical qubits that are adjacent with one another.\n",
+    "- Initial mapping of the qubits in the circuit (i.e. decision variables) to physical qubits on the device.\n",
+    "- Unrolling of the instructions in the quantum circuit to the hardware native instructions that the backend understands.\n",
+    "- Routing of any qubits in the circuit that interact to physical qubits that are adjacent with one another.\n",
     "\n",
     "And as always, more details about this can be found on the documentation site.\n",
     "\n",
@@ -162,19 +172,19 @@
     "\n",
     "And with that, we have a transpiled circuit that is ready to be executed on hardware!\n",
     "\n",
-    "### 3.\tExecute\n",
+    "### Execute\n",
     "\n",
-    "So far, we transpiled the circuit leaving the parameters gamma and beta alone — but we can't actually run the circuit without specifying these parameters. In the QAOA workflow, the optimal QAOA parameters are found in an iterative optimization loop, where we run a series of circuit evaluations and then use a classical optimizer to find the optimal 𝛽 and 𝛾 parameters. However, we need to start somewhere, so we make an initial guess of $\\gamma=\\pi/2$ and $\\beta=\\pi$.\n",
+    "So far, we transpiled the circuit leaving the parameters gamma and beta alone — but we can't actually run the circuit without specifying these parameters. In the QAOA workflow, the optimal QAOA parameters are found in an iterative optimization loop, where we run a series of circuit evaluations and then use a classical optimizer to find the optimal 𝛽 and 𝛾 parameters. However, we need to start somewhere, so we make an initial guess of $\\gamma=\\pi/2$ and $\\beta=\\pi.$\n",
     "\n",
     "Execution Modes\n",
     "\n",
     "Now, we're almost ready to run the circuit — I promise! But first, it is important to note that you can send your job in a variety of different ways, which are called execution modes.\n",
     "\n",
-    "Job mode: A single primitive request of the estimator or the sampler is made without a context manager. Circuits and inputs are packaged as primitive unified blocs (PUBs) and submitted as an execution task on the quantum computer.\n",
+    "- Job mode: A single primitive request of the estimator or the sampler is made without a context manager. Circuits and inputs are packaged as primitive unified blocs (PUBs) and submitted as an execution task on the quantum computer.\n",
     "\n",
-    "Batch mode: A multi-job manager for efficiently running an experiment that is comprised of bundle of independent jobs. Use batch mode to submit multiple primitive jobs simultaneously\n",
+    "- Batch mode: A multi-job manager for efficiently running an experiment that is comprised of bundle of independent jobs. Use batch mode to submit multiple primitive jobs simultaneously\n",
     "\n",
-    "Session mode: A dedicated window for running a multi-job workload. This allows users to experiment with variational algorithms in a more predictable way, and even run multiple experiments simultaneously, taking advantage of parallelism in the stack. Use sessions for iterative workloads or experiments that require dedicated access. See Run jobs in a session for examples.\n",
+    "- Session mode: A dedicated window for running a multi-job workload. This allows users to experiment with variational algorithms in a more predictable way, and even run multiple experiments simultaneously, taking advantage of parallelism in the stack. Use sessions for iterative workloads or experiments that require dedicated access. See Run jobs in a session for examples.\n",
     "\n",
     "For a QAOA experiment, a session would be a good choice to proceed with if you have access to it, since we need to sample our circuit many times with different parameter values to find the optimum.\n",
     "\n",
@@ -188,7 +198,7 @@
     "\n",
     "In the post-processing stage, we'll analyze the data and display these results to see if our quantum algorithm found the correct solutions.\n",
     "\n",
-    "### 4.\tPost-process\n",
+    "### Post-process\n",
     "\n",
     "Now let's plot a histogram of the data to look at the final solution:\n",
     "\n",
@@ -208,18 +218,18 @@
     "But remember: this is an approximate algorithm. It is not infallible, and it is not correct 100% of the time. You do have to employ some of your own knowledge and understanding to sanity-check the solutions.\n",
     "\n",
     "This error can arise from several places:\n",
-    "1. it could be the approximate nature of the algorithm itself, and the small number of layers I employed\n",
-    "2.\tIt could be a finite sampling error, this could be reduced if I increase the number of shots in my experiment\n",
-    "3.\tit could also be a readout error, since the fourth real solution is only off by one bit\n",
+    "1. It could be the approximate nature of the algorithm itself, and the small number of layers I employed.\n",
+    "2. It could be a finite sampling error, this could be reduced if I increase the number of shots in my experiment.\n",
+    "3. It could also be a readout error, since the fourth real solution is only off by one bit.\n",
     "\n",
     "This kind of error analysis is what it takes to become a practitioner of quantum computing. You need to understand the performance of the hardware and how this can contribute to certain types of errors and how to correct for them.\n",
     "\n",
     "However, let's not forget that there were 32 possible bit strings, and that the four real solutions were included in the top five best candidates. And we only used two layers to find this. In general, if we wanted to increase our chances of finding the best Max-Cut every time, we could increase the layer depth. There are some subtleties to this, but that's for a later lesson.\n",
     "\n",
     "\n",
-    "## Now at utility-scale:\n",
+    "## At utility-scale\n",
     "\n",
-    "Now that you've had a taste of the process of solving a small Max-Cut problem on a quantum computer, I challenge you to do it at scale. Follow along in the linked [tutorial](https://learning.quantum.ibm.com/tutorial/quantum-approximate-optimization-algorithm) to see how many cuts you can get in a 125-node graph."
+    "Now that you've had a taste of the process of solving a small Max-Cut problem on a quantum computer, I challenge you to do it at scale. Follow along in the linked [tutorial](/docs/tutorials/quantum-approximate-optimization-algorithm) to see how many cuts you can get in a 125-node graph."
    ]
   }
  ],
