--- a/learning/courses/quantum-chem-with-vqe/index.mdx
+++ b/learning/courses/quantum-chem-with-vqe/index.mdx
@@ -9,7 +9,7 @@ This course covers building and mapping a chemical Hamiltonian for evaluation on
 
 ## Exam
 
-To earn your Quantum Chemistry with VQE badge, take the exam at IBM Training linked below. This exam is intended to be taken after reading the lessons in this course. Once you have passed the exam, you will be notified by Credly that you have earned a badge.
+To earn your Quantum Chemistry with VQE badge, take the exam at IBM Training, linked below. This exam is intended to be taken after reading the lessons in this course. After you pass the exam, you will be notified by Credly that you have earned a badge.
 
 [Exam](/learning/courses/quantum-chem-with-vqe/exam)
 
