--- a/learning/courses/quantum-chem-with-vqe/introduction.ipynb
+++ b/learning/courses/quantum-chem-with-vqe/introduction.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "* Hamiltonian\n",
     "* Ansatz\n",
-    "* Classical optimizer.\n",
+    "* Classical optimizer\n",
     "\n",
     "All these elements are brought together to build VQE calculations on Qiskit Runtime Primitives, primarily Estimator. For more on primitives see the [documentation](https://docs.quantum.ibm.com/api/qiskit/primitives). In setting up a VQE calculation, we will follow the standard Qiskit Patterns framework:\n",
     "\n",
