--- a/learning/courses/quantum-chem-with-vqe/introduction.ipynb
+++ b/learning/courses/quantum-chem-with-vqe/introduction.ipynb
@@ -15,7 +15,7 @@
     "* Ansatz\n",
     "* Classical optimizer\n",
     "\n",
-    "All these elements are brought together to build VQE calculations on Qiskit Runtime Primitives, primarily Estimator. For more on primitives see the [documentation](https://docs.quantum.ibm.com/api/qiskit/primitives). In setting up a VQE calculation, we will follow the standard Qiskit Patterns framework:\n",
+    "All these elements are brought together to build VQE calculations on Qiskit Runtime Primitives, primarily Estimator. For information about primitives see the [documentation](/docs/guides/primitives). In setting up a VQE calculation, we will follow the standard Qiskit Patterns framework:\n",
     "\n",
     "* Map classical inputs to a quantum problem\n",
     "* Optimize problem for quantum execution\n",
