--- a/learning/courses/quantum-chem-with-vqe/introduction.ipynb
+++ b/learning/courses/quantum-chem-with-vqe/introduction.ipynb
@@ -22,7 +22,7 @@
     "* Execute using Qiskit Runtime primitives\n",
     "* Post-process, return result in classical format\n",
     "\n",
-    "Some explanation of the framework will be found throughout this course, but for a complete explanation with examples of Qiskit Patterns, see [this documentation](https://docs.quantum.ibm.com/run/quantum-serverless#qiskit-patterns-with-quantum-serverless).\n",
+    "Some explanation of the framework will be found throughout this course, but for a complete explanation with examples of Qiskit Patterns, see [this documentation](/docs/guides/intro-to-patterns).\n",
     "\n",
     "We recommend planning to devote approximately 6-10 hours to the completion of this course. The videos and reading are likely to take 2 hours to complete. The remaining time is for executing and modifying code cells, completing quiz questions and reading linked documentation.\n",
     "\n",
