--- a/learning/courses/quantum-chem-with-vqe/ansatz.ipynb
+++ b/learning/courses/quantum-chem-with-vqe/ansatz.ipynb
@@ -274,7 +274,7 @@
    "source": [
     "These pre-made variational circuits are useful heuristics both in terms of achieving a desired level of entanglement and in limiting circuit depth. But there is nothing magical about them. You are free to make your own variational circuit. Indeed that may be advantageous in cases where you know something about the entanglement of the target state of your system.\n",
     "\n",
-    "To make your own ansatz, you simply construct a quantum circuit, with some subset of gates being functions of elements of a parameter vector (\"theta\" in the 3-qubit example below)."
+    "To make your own ansatz, you simply construct a quantum circuit with some subset of gates being functions of elements of a parameter vector (\"theta\" in the three-qubit example below)."
    ]
   },
   {
