--- a/learning/courses/quantum-chem-with-vqe/ansatz.ipynb
+++ b/learning/courses/quantum-chem-with-vqe/ansatz.ipynb
@@ -335,7 +335,7 @@
    "source": [
     "Generally, selecting the best ansatz is an art; the best ansatz is whatever ansatz helps you reach your target in the fewest optimization steps. It is easier to identify ansaetze that are likely to be bad. For example, greater circuit depth tends to result in accumulation of errors. Error mitigation can help with this, but it is a good practice to keep the circuit depth as low as is reasonable. But don't skip entanglement that is necessary. You might have a target state that requires a full entanglement scheme. Two examples are shown below that are likely to be poor choices for fairly obvious reasons. Choosing a good ansatz will be revisited in later sections in the context of convergence tests.\n",
     "\n",
-    "This first circuit is likely to be a poor choice because the last qubit is not entangled with the others at all. Indeed there is no computationally meaningful action on the last qubit at all. In all likelihood, the last qubit should either be entangled with the others or removed from the calculation."
+    "This first circuit is likely to be a poor choice because the last qubit is not entangled with the others at all. Indeed there is no computationally meaningful action on the last qubit. In all likelihood, the last qubit should either be entangled with the others or removed from the calculation."
    ]
   },
   {
