--- a/learning/courses/quantum-chem-with-vqe/ansatz.ipynb
+++ b/learning/courses/quantum-chem-with-vqe/ansatz.ipynb
@@ -431,7 +431,7 @@
    "id": "3eea1998",
    "metadata": {},
    "source": [
-    "These circuits are not \"complete\" in the sense that there are still unknown and variable parameters to be inserted into many of the gates. Those parameters are chosen by making successive guesses, and updating parameters to lower the expectation value of the cost function (in the chemistry context, typically the ground state energy). In one, or even a few dimensions, this is trivial. But the circuit above has 20 variational parameters, meaning that finding the target state with the minimal energy means search a 20-dimensional state (another reasonn not to include unnecessary circuit gates). This is where classical optimizing algorithms come into play, and that is the subject of the next lesson."
+    "These circuits are not \"complete\" in the sense that there are still unknown and variable parameters to be inserted into many of the gates. Those parameters are chosen by making successive guesses, and updating parameters to lower the expectation value of the cost function (in the chemistry context, typically the ground state energy). In one, or even a few dimensions, this is trivial. But the circuit above has 20 variational parameters, meaning that finding the target state with the minimal energy means searching a 20-dimensional state (another reason not to include unnecessary circuit gates). This is where classical optimizing algorithms come into play, and that is the subject of the next lesson."
    ]
   }
  ],
