--- a/learning/courses/quantum-chem-with-vqe/hamiltonian-construction.ipynb
+++ b/learning/courses/quantum-chem-with-vqe/hamiltonian-construction.ipynb
@@ -46,7 +46,7 @@
    "id": "bf113c37-5d47-4b73-a6d7-54d4d9b83679",
    "metadata": {},
    "source": [
-    "Python Notebooks:\n",
+    "Python notebooks:\n",
     "\n",
     "This python notebook contains the code reviewed here, as well as multiple example molecules.\n",
     "This python notebook shows how to obtain ground state energy and/or bond length information using classical methods.\n",
