Very minor corrections to Basics of Quantum Information

--- a/learning/courses/basics-of-quantum-information/entanglement-in-action/chsh-game.ipynb
+++ b/learning/courses/basics-of-quantum-information/entanglement-in-action/chsh-game.ipynb
@@ -656,7 +656,7 @@
     "The CHSH game offers a way to experimentally test the theory of quantum information.\n",
     "Experiments can be performed that implement the CHSH game, and test the sorts of strategies based on entanglement described above.\n",
     "This provides us with a high degree of confidence that entanglement is real — and unlike the sometimes vague or poetic ways that we come up with to explain entanglement, the CHSH game gives us a concrete and testable way to *observe* entanglement.\n",
-    "The 2022 Nobel Prize in Physics acknowledges the importance of this line of work: the prize was awarded to Alain Aspect, John Clauser (the C in CHSH) and Anton Zeilinger, for observing entanglement through Bell tests on entangled photons."
+    "The 2022 Nobel Prize in Physics acknowledges the importance of this line of work: the prize was awarded to Alain Aspect, John Clauser (the C in CHSH) and Anton Zeilinger for observing entanglement through Bell tests on entangled photons."
    ]
   }
  ],
