--- a/learning/courses/basics-of-quantum-information/multiple-systems/quantum-information.ipynb
+++ b/learning/courses/basics-of-quantum-information/multiple-systems/quantum-information.ipynb
@@ -238,7 +238,7 @@
     "$$\n",
     "\n",
     "The Bell states are so-named in honor of <DefinitionTooltip definition=\"John Stewart Bell (1928—1990) was a physicist who made important contributions to the foundations of quantum theory\">John Bell</DefinitionTooltip>.\n",
-    "Notice that the same argument that establishes that $\\vert\\phi^+\\rangle$ is not a product state reveals that none of the other Bell states is a product state either: all four of the Bell states represent entanglement between two qubits.\n",
+    "Notice that the same argument that establishes that $\\vert\\phi^+\\rangle$ is not a product state reveals that none of the other Bell states are product states either: all four of the Bell states represent entanglement between two qubits.\n",
     "\n",
     "The collection of all four Bell states\n",
     "\n",
@@ -275,7 +275,7 @@
     "$$\n",
     "\n",
     "Neither of these states is a product state, meaning that they cannot be written as a tensor product of three qubit quantum state vectors.\n",
-    "We'll examine both of these two states later when we discuss partial measurements of quantum states of multiple systems.\n",
+    "We'll examine both of these states later when we discuss partial measurements of quantum states of multiple systems.\n",
     "\n",
     "### Additional examples\n",
     "\n",
@@ -750,7 +750,7 @@
     "The probability that the measurement outcome is 1 is $1/3,$ in which case the state of the three qubits becomes\n",
     "$\\vert 100\\rangle.$\n",
     "\n",
-    "The W state is symmetric, in the sense that it doens't change if we permute the qubits.\n",
+    "The W state is symmetric, in the sense that it does not change if we permute the qubits.\n",
     "We therefore obtain a similar description for measuring the second or third qubit rather than the first.\n",
     "\n",
     "## Unitary operations\n",
