--- a/learning/courses/basics-of-quantum-information/single-systems/quantum-information.ipynb
+++ b/learning/courses/basics-of-quantum-information/single-systems/quantum-information.ipynb
@@ -85,7 +85,7 @@
     "  = \\frac{1+2i}{3}\\,\\vert 0\\rangle - \\frac{2}{3}\\,\\vert 1\\rangle.\n",
     "$$\n",
     "\n",
-    "The first two examples, $\\vert 0\\rangle$ and $\\vert 1\\rangle,$ illustrate that standard basis elements are valid quantum state vectors: their entries are complex numbers, where the imaginary part of these numbers all happens to be $0,$ and computing the sum of the absolute values squared of the entries yields\n",
+    "The first two examples, $\\vert 0\\rangle$ and $\\vert 1\\rangle,$ illustrate that standard basis elements are valid quantum state vectors: their entries are complex numbers, where the imaginary part of these numbers all happen to be $0,$ and computing the sum of the absolute values squared of the entries yields\n",
     "\n",
     "$$\n",
     "  \\vert 1\\vert^2 + \\vert 0\\vert^2 = 1\n",
@@ -567,7 +567,7 @@
     "\\end{aligned}\n",
     "$$\n",
     "\n",
-    "More succinctly, we've obtained these four equations.\n",
+    "More succinctly, we obtain these four equations.\n",
     "\n",
     "$$\n",
     "  \\begin{aligned}\n",
