--- a/learning/courses/foundations-of-quantum-error-correction/index.mdx
+++ b/learning/courses/foundations-of-quantum-error-correction/index.mdx
@@ -10,7 +10,7 @@ Welcome to *Foundations of Quantum Error Correction,* the fourth course in the *
 - [Basics of quantum information](/learning/courses/basics-of-quantum-information/index)
 - [Fundamentals of quantum algorithms](/learning/courses/fundamentals-of-quantum-algorithms/index)
 - [General formulation of quantum information](/learning/courses/general-formulation-of-quantum-information/index)
-- [Foundations of quantum error correction](/learning/courses/foundations-of-quantum-error-correction/index)
+- Foundations of quantum error correction (this course)
 
 This course is on quantum error correction, with a focus on foundational concepts. 
 It begins with an explanation of what quantum error correcting codes are and how they work. 
