--- a/learning/courses/basics-of-quantum-information/index.mdx
+++ b/learning/courses/basics-of-quantum-information/index.mdx
@@ -7,7 +7,7 @@ description: Learn about quantum states, projective measurements, and unitary op
 
 Welcome to *Basics of Quantum Information,* the first course in the *Understanding Quantum Information and Computation* series comprising the following courses:
 
-- Basics of quantum information
+- Basics of quantum information (this course)
 - [Fundamentals of quantum algorithms](/learning/courses/fundamentals-of-quantum-algorithms/index)
 - [General formulation of quantum information](/learning/courses/general-formulation-of-quantum-information/index)
 - [Foundations of quantum error correction](/learning/courses/foundations-of-quantum-error-correction/index)
@@ -15,14 +15,6 @@ Welcome to *Basics of Quantum Information,* the first course in the *Understandi
 This course begins with an introduction to the mathematics of quantum information, including a description of quantum information for both single and multiple systems. It then moves on to quantum circuits, which provide a standard way to describe quantum computations. Finally, three fundamentally important examples connected with the phenomenon of quantum entanglement are explained: quantum teleportation, superdense coding, and the CHSH game (also known as the CHSH inequality).
 
 This course is intended for students, professionals, and hobbyists in fields such as computer science, physics, engineering, and mathematics who are eager to gain knowledge on the theoretical foundations of quantum information and computation.
-
-## Learning goals
-
-Upon completing the course, you will be able to:
-
-- Recall linear algebra concepts used to describe classical and quantum states, measurements, and operations.
-- Calculate quantum state descriptions after operations and measurements.
-- Explain quantum entanglement to a friend or colleague and provide examples of its applications.
 
 ## Recommended background
 
