--- a/learning/courses/quantum-chem-with-vqe/hamiltonian-construction.ipynb
+++ b/learning/courses/quantum-chem-with-vqe/hamiltonian-construction.ipynb
@@ -9,7 +9,11 @@
     "\n",
     "# Hamiltonians for Quantum Chemistry\n",
     "\n",
+    "Let's begin with a brief overview of the role Hamiltonians play in VQE.\n",
+    "\n",
     "## The Hamiltonian in VQE Overview\n",
+    "\n",
+    "Dr. Victoria Lipinska walks us through Hamiltonians and how to map them for use in quantum computing.\n",
     "\n",
     "<iframe src=\"https://video.ibm.com/embed/recorded/132414924\" width=\"690\" height=\"390\"></iframe>\n",
     "\n",
