--- a/learning/courses/quantum-chem-with-vqe/hamiltonian-construction.ipynb
+++ b/learning/courses/quantum-chem-with-vqe/hamiltonian-construction.ipynb
@@ -255,7 +255,7 @@
    "id": "5ee2e242-6508-4a0d-87a7-b7faa897f36d",
    "metadata": {},
    "source": [
-    "2. Generate fermionic hamiltonian\n",
+    "2. Generate fermionic Hamiltonian\n",
     "\n",
     "__scf__ refers to a wide range of self-consistent field methods.\n",
     "\n",
