--- a/learning/courses/quantum-chem-with-vqe/hamiltonian-construction.ipynb
+++ b/learning/courses/quantum-chem-with-vqe/hamiltonian-construction.ipynb
@@ -291,7 +291,7 @@
    "id": "d77b6abe-a0c3-467e-9551-14bdad6b0fd0",
    "metadata": {},
    "source": [
-    "We want a Hamiltonian, and this is often separated into energy of an electronic core (ecore, not involved in minimization), single-electron operators (h1e) and two-electron energies (h2e). These are explicitly extracted below in the last two lines."
+    "We want a Hamiltonian, and this is often separated into energy of an electronic core (ecore, not involved in minimization), single-electron operators (h1e), and two-electron energies (h2e). These are explicitly extracted below in the last two lines."
    ]
   },
   {
