--- a/learning/courses/quantum-chem-with-vqe/hamiltonian-construction.ipynb
+++ b/learning/courses/quantum-chem-with-vqe/hamiltonian-construction.ipynb
@@ -322,7 +322,7 @@
    "id": "f90c2756-8155-4417-89e9-f248ae76895c",
    "metadata": {},
    "source": [
-    "The Cholesky function helps us obtain a low-rank decomposition of the two-electron terms in the hamiltonian."
+    "The Cholesky function helps us obtain a low-rank decomposition of the two-electron terms in the Hamiltonian."
    ]
   },
   {
