--- a/learning/courses/quantum-chem-with-vqe/introduction.ipynb
+++ b/learning/courses/quantum-chem-with-vqe/introduction.ipynb
@@ -41,7 +41,8 @@
     "<iframe src=\"https://video.ibm.com/embed/recorded/132414895\" width=\"920\" height=\"520\"></iframe>\n",
     "\n",
     "**References**\n",
-    "\n",
+ "\n",
+    "The following articles are referenced in the above video.\n",
     "* [Medium blog post explaining VQE](https://towardsdatascience.com/the-variational-quantum-eigensolver-explained-adcbc9659c3a)\n",
     "* [What problem does a variational quantum eigensolver solve?](https://pyqml.medium.com/what-problem-does-a-variational-quantum-eigensolver-solve-3b91c47af23b)\n",
     "* [The comprehensive guide to the variational quantum eigensolver](https://pyqml.medium.com/the-comprehensive-guide-to-the-variational-quantum-eigensolver-ee6775e8279e)\n",
