--- a/learning/courses/quantum-chem-with-vqe/hamiltonian-construction.ipynb
+++ b/learning/courses/quantum-chem-with-vqe/hamiltonian-construction.ipynb
@@ -485,7 +485,7 @@
    "id": "b211c7f6-7ef4-444d-84f9-bfe4b80dda5a",
    "metadata": {},
    "source": [
-    "The notebooks linked above contain several example molecules; with a little modification, this should enable you to examine most small molecules. Let's just briefly note two important points to consider when constructing the fermionic operators for a molecule. As the molecule type changes, the symmetry will change. Similarly, the number of orbitals with various symmetries, like the cylindrically symmetric \"A1\", will change. These changes are evident even with the simple extension to LiH, as seen here:"
+    "Let's just briefly note two important points to consider when constructing the fermionic operators for a molecule. As the molecule type changes, the symmetry will change. Similarly, the number of orbitals with various symmetries, like the cylindrically symmetric \"A1\", will change. These changes are evident even with the simple extension to LiH, as seen here:"
    ]
   },
   {
