--- a/docs/guides/build-noise-models.ipynb
+++ b/docs/guides/build-noise-models.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "3c114909-aa2a-4638-b945-e31dcdbaf248",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
     "service = QiskitRuntimeService()\n",
-    "backend = service.backend(\"ibm_brisbane\")\n",
+    "backend = service.least_busy()\n",
     "noise_model = NoiseModel.from_backend(backend)"
    ]
   },
