--- a/docs/guides/dynamical-decoupling-pass-manager.ipynb
+++ b/docs/guides/dynamical-decoupling-pass-manager.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "368cab01-8eb0-4feb-a5d1-269d225af7af",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
     "service = QiskitRuntimeService()\n",
-    "backend = service.backend(\"ibm_brisbane\")\n",
+    "backend = service.least_busy()\n",
     "\n",
     "target = backend.target\n",
     "basis_gates = list(target.operation_names)"
