Apply suggestions from code review
Co-authored-by: Rebecca Dimock <66339736+beckykd@users.noreply.github.com>

--- a/learning/courses/quantum-chem-with-vqe/ansatz.ipynb
+++ b/learning/courses/quantum-chem-with-vqe/ansatz.ipynb
@@ -10,14 +10,15 @@
    "source": [
     "{/* cspell:ignore Lipinska autoplay Tilly Ardle webkitallowfullscreen allowfullscreen frameborder referrerpolicy */}\n",
     "\n",
-    "# The Ansatz\n",
+    "# The ansatz\n",
     "\n",
-    "Watch as Victoria Lipinska explains what an ansatz is, and why we care about it in the context of VQE.\n",
+    "Watch as Victoria Lipinska explains what an ansatz is and why we care about it in the context of a variational quantum eigensolver (VQE).\n",
     "\n",
     "<iframe width=\"780\" height=\"438\" src=\"https://video.ibm.com/embed/recorded/132414879\"></iframe>\n",
     "\n",
     "**References**\n",
-    "\n",
+     "\n",
+    "The following articles are referenced in the above video.\n",
     "* [The theory of variational hybrid quantum-classical algorithms, McClean, et al.](https://iopscience.iop.org/article/10.1088/1367-2630/18/2/023023/meta)\n",
     "* [Quantum Chemistry in the Age of Quantum Computing, Cao, et al.](https://arxiv.org/pdf/1812.09976.pdf)\n",
     "* [Noisy intermediate-scale quantum (NISQ) algorithms, Bharti, et al.](https://arxiv.org/pdf/2101.08448.pdf)\n",
@@ -31,20 +32,20 @@
    "id": "3b7bb3dc",
    "metadata": {},
    "source": [
-    "## Ansatz Code\n",
+    "## Ansatz code\n",
     "\n",
-    "In the previous lesson you created a __Hamiltonian__ describing the energy of your molecule of interest, and mapped it to a format useful for a quantum computer. The variational quantum eigensolver uses a __variational circuit__ to prepare quantum states. We then use those states to determine the expectation value of the Hamiltonian (the energy). Parameters in the variational circuit are varied until the calculation converges on a minimum expectation value. In this quantum chemistry context this should be the ground state energy. This lesson focuses on the variational circuit, also called the __ansatz__ (a German word meaning \"approach\" or \"method\").\n",
+    "In the previous lesson you created a __Hamiltonian__ that describes the energy of your molecule of interest, and mapped it to a format useful for a quantum computer. The VQE uses a _variational circuit_ to prepare quantum states. We then use those states to determine the expectation value of the Hamiltonian (the energy). Parameters in the variational circuit are varied until the calculation converges on a minimum expectation value. In the quantum chemistry context, this should be the ground state energy. This lesson focuses on the variational circuit, also called the __ansatz__ (a German word meaning \"approach\" or \"method\").\n",
     "In this lesson you will learn\n",
     "- the set of pre-made ansaetze available in the circuit library\n",
-    "- how to specify or modify the features of an ansatz\n",
-    "- how to build your own ansatz\n",
+    "- How to specify or modify the features of an ansatz\n",
+    "- How to build your own ansatz\n",
     "- examples of good and bad ansaetze\n",
     "\n",
-    "The Qiskit circuit library has many categories of circuit that can be used as an ansatz. Here, we will restrict our discussion to 2-local circuits (circuits consisting of gates that act on, at most, two qubits at a time). __EfficientSU2__ is a commonly-used ansatz.\n",
+    "The Qiskit circuit library has many categories of circuits that can be used as an ansatz. Here, we will restrict our discussion to two-local circuits (circuits consisting of gates that act on, at most, two qubits at a time). __EfficientSU2__ is a commonly-used ansatz.\n",
     "\n",
     "An EfficientSU2 circuit consists of layers of single qubit operations spanned by SU(2) (special unity group of degree 2, like Pauli rotation gates) and CX entanglements. This is a heuristic pattern that can be useful in variational quantum algorithms like VQE and classification circuits in quantum machine learning (QML).\n",
     "\n",
-    "We'll start with a 4-qubit example EfficientSU2 circuit with two types of SU(2) gates, say rx & ry. We also specify an entanglement scheme, and the number of repetitions. If you simply .draw() the circuits, you will get a fairly abstract representation. A more comprehensible circuit diagram is obtained using .decompose().draw(), and here we will use the output = 'mpl'."
+    "We'll start with a four-qubit example EfficientSU2 circuit with two types of SU(2) gates, say rx and ry. We also specify an entanglement scheme and the number of repetitions. If you simply `.draw()` the circuits, you will get a fairly abstract representation. A more comprehensible circuit diagram is obtained by using `.decompose().draw()`, and here we will use `output = \"mpl\"'."
    ]
   },
   {
@@ -92,7 +93,7 @@
    "id": "cf87d8ee",
    "metadata": {},
    "source": [
-    "The SU(2) gates appear at the beginning and end with the order and elements as specified in su2_gates = [...]. The entanglement scheme \"linear\" means that the CX gates step through the numbered qubits, entangling 0 & 1, then 1 & 2, and so on down a diagonal line in the cirucit. As you might expect, setting reps = 2 simply adds an entanglement layer and ending SU(2) layer. Settings reps = n corresponds to n entanglement layers, with SU(2) layers between them, and on each end."
+    "The SU(2) gates appear at the beginning and end with the order and elements as specified in su2_gates = [...]. The entanglement scheme `linear` means that the CX gates step through the numbered qubits, entangling 0 & 1, then 1 & 2, and so on, down a diagonal line in the circuit. As you might expect, setting `reps = 2` simply adds an entanglement layer and an ending SU(2) layer. Settings `reps = n` corresponds to `n` entanglement layers, with SU(2) layers between them and on each end."
    ]
   },
   {
@@ -122,7 +123,7 @@
    "id": "61cae6e6",
    "metadata": {},
    "source": [
-    "There are several other entanglement schemes. Two worth noting are \"circular\", and \"full\". Circular entanglement is identical to linear entanglement, but with an additional CX gate entangling the first and last qubit. The full entanglement scheme includes a CX gate between every pair of qubits. Note that for an N-qubit circuit, this is $N(N-1)/2$  $CX$ gates, and can become computationally expensive."
+    "There are several other entanglement schemes. Two worth noting are `circular` and `full`. Circular entanglement is identical to linear entanglement, but with an additional CX gate entangling the first and last qubit. The full entanglement scheme includes a CX gate between every pair of qubits. Note that for an N-qubit circuit, this is $N(N-1)/2$  $CX$ gates, and can become computationally expensive."
    ]
   },
   {
@@ -176,7 +177,7 @@
    "id": "7a958757",
    "metadata": {},
    "source": [
-    "You can keep an eye on your circuit depths using .depth(), but note that just as in the visualization, it is important to .decompose() first. Otherwise, the .depth() will count the entire ansatz as a single circuit element."
+    "You can monitor your circuit depths by using `.depth()`, but note that, just as in the visualization, it is important to `.decompose()` first. Otherwise, the `.depth()` will count the entire ansatz as a single circuit element."
    ]
   },
   {
@@ -204,7 +205,7 @@
    "id": "79c2c9fd",
    "metadata": {},
    "source": [
-    "A generalization of the EfficientSU2 is the TwoLocal circuit. The TwoLocal also contains SU(2) blocks (or rotation blocks) and entanglement blocks. Here, we are free to specify the type of entanglement gates we want to use, for example CRX gates. In this example, all gates accept a parameter, but that need not be the case. One could use Y rotation gates, and CX entanglement gates, for example."
+    "A generalization of the EfficientSU2 is the TwoLocal circuit. The TwoLocal also contains SU(2) blocks (or rotation blocks) and entanglement blocks. Here, we are free to specify the type of entanglement gates we want to use, for example CRX gates. In this example, all gates accept a parameter, but that need not be the case. One could use Y rotation gates and CX entanglement gates, for example."
    ]
   },
   {
@@ -240,7 +241,7 @@
    "id": "29687857",
    "metadata": {},
    "source": [
-    "The last ansatz we will discuss by name is the PauliTwoDesign. This circuit contains an initial rotation of RY(pi/4), and rotation layers contain single qubit Pauli rotations, where the axis is chosen uniformly at random to be X, Y or Z. The entanglement layers are composed of pairwise CZ gates with a total depth of 2. Note the difference in entanglement (and total circuit) depth between this PauliTwoDesign and, for example, the EfficientSU2."
+    "The last ansatz we will discuss by name is the PauliTwoDesign. This circuit contains an initial rotation of $RY(pi/4)$, and rotation layers contain single qubit Pauli rotations, where the axis is chosen uniformly at random to be X, Y, or Z. The entanglement layers are composed of pairwise CZ gates with a total depth of two. Note the difference in entanglement (and total circuit) depth between this PauliTwoDesign and, for example, the EfficientSU2."
    ]
   },
   {
