--- a/learning/courses/quantum-chem-with-vqe/introduction.ipynb
+++ b/learning/courses/quantum-chem-with-vqe/introduction.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "We recommend planning to devote approximately 6-10 hours to the completion of this course. The videos and reading are likely to take two hours to complete. The remaining time is for executing and modifying code cells, completing quiz questions, and reading linked documentation.\n",
     "\n",
-    "IBM Quantum&reg; has other upskilling offerings related to VQE. If you are already familiar with the components of VQE and simply wish to put it into practice, see our tutorial: [Variational Quantum Eigensolver](/docs/tutorials/variational-quantum-eigensolver). If you are interested in a deeper understanding of how variational algorithms like VQE work, we recommend the course [Variational Algorithm Design](/learning/courses/variational-algorithm-design/optimization-loops).\n",
+    "IBM Quantum&reg; has other upskilling offerings related to VQE. If you are already familiar with the components of VQE and simply wish to put it into practice, see our tutorial: [Variational Quantum Eigensolver](/docs/tutorials/variational-quantum-eigensolver).\n",
     "\n",
     "## Pre-course survey\n",
     "\n",
