--- a/learning/courses/utility-scale-quantum-computing/lesson-04-grovers-algorithm.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/lesson-04-grovers-algorithm.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "Grover's algorithm is one of the most well-known quantum algorithms due to its quadratic speedup over classical search methods. In classical computing, searching an unsorted database of $N$ items requires $O(N)$ time complexity, meaning that in the worst case, one might have to examine each item individually. However, Grover's algorithm allows us to achieve this search in $O(\\sqrt{N})$ time, leveraging the principles of quantum mechanics to identify the target item more efficiently.\n",
     "\n",
-    "The algorithm uses amplitude amplification, a process that increases the probability amplitude of the correct answer state in a quantum superposition, allowing it to be measured with higher probability. This speedup makes Grover's algorithm valuable in various applications beyond simple database search, especially when the dataset size is large. Detailed explanations of the algorithm is provided in the [Grover's algorithm notebook](https://learning.quantum.ibm.com/course/fundamentals-of-quantum-algorithms/grovers-algorithm).\n",
+    "The algorithm uses amplitude amplification, a process that increases the probability amplitude of the correct answer state in a quantum superposition, allowing it to be measured with higher probability. This speedup makes Grover's algorithm valuable in various applications beyond simple database search, especially when the dataset size is large. Detailed explanations of the algorithm is provided in the [Grover's algorithm notebook](/learning/courses/fundamentals-of-quantum-algorithms/grover-algorithm/introduction).\n",
     "\n",
     "\n",
     "### The Basic Structure of Grover's Algorithm\n",
