links and small catches

--- a/learning/courses/utility-scale-quantum-computing/lesson-06-variational-quantum-algorithms.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/lesson-06-variational-quantum-algorithms.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "*Approximate QPU time to run this experiment is 9 minutes (tested on ibm_brisbane).*\n",
     "\n",
-    "(this notebook may not evaluate in the time allowed on the open plan. Please use quantum computing resources wisely.)\n",
+    "(this notebook may not evaluate in the time allowed on the Open Plan. Please use quantum computing resources wisely.)\n",
     "\n",
     "</Admonition>"
    ]
@@ -42,7 +42,7 @@
    "metadata": {},
    "source": [
     "You require the following library in your environment to run this notebook.\n",
-    "If you have not installed it yet, please install them by un-commenting and running the following cell."
+    "If you have not installed it yet, you can install it by un-commenting and running the following cell."
    ]
   },
   {
@@ -992,9 +992,9 @@
    "id": "bc51e7bf-e582-49ba-93f8-035624d56ccf",
    "metadata": {},
    "source": [
-    "## 3. Quantum Optimization with Qiskit Patterns\n",
+    "## 3. Quantum Optimization with Qiskit patterns\n",
     "\n",
-    "In this how-to we will learn about Qiskit Patterns and quantum approximate optimization. A Qiskit Pattern is an intuitive, repeatable set of steps for implementing a quantum computing workflow:"
+    "In this how-to we will learn about Qiskit patterns and quantum approximate optimization. A Qiskit pattern is an intuitive, repeatable set of steps for implementing a quantum computing workflow:"
    ]
   },
   {
@@ -1013,7 +1013,7 @@
    "source": [
     "We will apply the patterns to the context of **combinatorial optimization** and show how to solve the **Max-Cut** problem using the **Quantum Approximate Optimization Algorithm (QAOA)**, a hybrid (quantum-classical) iterative method.\n",
     "\n",
-    "Note that this QAOA part is based on \"Part 1: Small-scale QAOA\" of [Solve utility-scale quantum optimization problems](https://learning.quantum.ibm.com/tutorial/quantum-approximate-optimization-algorithm). See the tutorial to learn how to scale it up."
+    "Note that this QAOA part is based on \"Part 1: Small-scale QAOA\" of the [Quantum approximate optimization algorithm](/docs/tutorials/quantum-approximate-optimization-algorithm) tutorial. See the tutorial to learn how to scale it up."
    ]
   },
   {
@@ -1021,7 +1021,7 @@
    "id": "1e943b1a-218a-468c-bb63-4269896ebebe",
    "metadata": {},
    "source": [
-    "### 3.1 (Small-scale) Qiskit Pattern for Optimization"
+    "### 3.1 (Small-scale) Qiskit pattern for optimization"
    ]
   },
   {
@@ -1420,7 +1420,7 @@
     "The following code transforms and optimizes the abstract circuit into a format that is ready for execution on one of devices accessible through the cloud using the **Qiskit IBM Runtime service**.\n",
     "\n",
     "Note that you can test your programs locally by \"local testing mode\" before sending them to real quantum computers.\n",
-    "More information about the local testing mode is available in our [documentation](https://docs.quantum.ibm.com/guides/local-testing-mode)."
+    "More information about the local testing mode is available in the [documentation.](/docs/guides/local-testing-mode)"
    ]
   },
   {
@@ -1533,7 +1533,7 @@
    "source": [
     "#### Run\n",
     "\n",
-    "The primitives offer a variety of [execution modes](https://docs.quantum.ibm.com/run/execution-modes) to schedule workloads on quantum devices, and a QAOA workflow runs iteratively in a session."
+    "The primitives offer a variety of [execution modes](/docs/guides/execution-modes) to schedule workloads on quantum devices, and a QAOA workflow runs iteratively in a session."
    ]
   },
   {
@@ -1876,7 +1876,7 @@
    "metadata": {},
    "source": [
     "This concludes the small-scale QAOA tutorial.\n",
-    "You will learn how to adapt QAOA at a utility-scale in \"Part 2: scale it up!\" of [Solve utility-scale quantum optimization problems](https://learning.quantum.ibm.com/tutorial/quantum-approximate-optimization-algorithm)."
+    "You will learn how to adapt QAOA at a utility-scale in \"Part 2: scale it up!\" of the [Quantum approximate optimization algorithm](/docs/tutorials/quantum-approximate-optimization-algorithm) tutorial."
    ]
   },
   {
